Fix main not fit in full screen

--- a/jamsinclub/static/base.css
+++ b/jamsinclub/static/base.css
@@ -169,6 +169,12 @@ li:hover {
     animation: fadeIn 0.3s linear forwards;
 }
 
+.wrapper2 {
+    /* 높이 꽉차게 */
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper.fade {
     /* 페이지 로드 시 사라지는 애니메이션 */
     animation: fadeOut 0.3s linear forwards;
